include/plasma_s.h

/** ****************************************************************************
 *  Declarations of math functions (LAPACK layout) - alphabetical order
 **/
int PLASMA_sgebrd(PLASMA_enum jobq, PLASMA_enum jobpt, int M, int N, float *A, int LDA, float *D, float *E, PLASMA_desc *descT, float *Q, int LDQ, float *PT, int LDPT);
int PLASMA_sgecon(PLASMA_enum norm, int N, float *A, int LDA, float anorm, float *rcond);
int PLASMA_sgelqf(int M, int N, float *A, int LDA, PLASMA_desc *descT);
int PLASMA_sgelqs(int M, int N, int NRHS, float *A, int LDA, PLASMA_desc *descT, float *B, int LDB);
int PLASMA_sgels(PLASMA_enum trans, int M, int N, int NRHS, float *A, int LDA, PLASMA_desc *descT, float *B, int LDB);
int PLASMA_sgemm(PLASMA_enum transA, PLASMA_enum transB, int M, int N, int K, float alpha, float *A, int LDA, float *B, int LDB, float beta, float *C, int LDC);
int PLASMA_sgeqp3( int M, int N, float *A, int LDA, int *jpvt, float *tau, float *work, float *rwork);
int PLASMA_sgeqrf(int M, int N, float *A, int LDA, PLASMA_desc *descT);
int PLASMA_sgeqrs(int M, int N, int NRHS, float *A, int LDA, PLASMA_desc *descT, float *B, int LDB);
int PLASMA_sgecfi(int m, int n, float *A, PLASMA_enum fin, int imb, int inb, PLASMA_enum fout, int omb, int onb);
int PLASMA_sgecfi_Async(int m, int n, float *A, PLASMA_enum f_in, int imb, int inb, PLASMA_enum f_out, int omb, int onb, PLASMA_sequence *sequence, PLASMA_request *request);
/** ****************************************************************************
 * Auxiliary function prototypes
 **/
int PLASMA_sLapack_to_Tile(float *Af77, int LDA, PLASMA_desc *A);
int PLASMA_sTile_to_Lapack(PLASMA_desc *A, float *Af77, int LDA);
int PLASMA_sLapack_to_Tile_Async(float *Af77, int LDA, PLASMA_desc *A, PLASMA_sequence *sequence, PLASMA_request *request);
int PLASMA_sTile_to_Lapack_Async(PLASMA_desc *A, float *Af77, int LDA, PLASMA_sequence *sequence, PLASMA_request *request);